sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:9: error: not found: value i
    if (isSmaller(i+1,i)){
                  ^AlgGnomeSort:9: error: not found: value i
    if (isSmaller(i+1,i)){
                      ^AlgGnomeSort:10: error: not found: value i
      swap(i,i+1)
           ^AlgGnomeSort:10: error: not found: value i
      swap(i,i+1)
             ^